--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,215 @@
-#root {
-  max-width: 1280px;
+/* สีของ bullets ปกติ */
+.swiper-pagination-bullet {
+  background-color: white; /* เปลี่ยนเป็นสีที่ต้องการ (เช่น เทา) */
+  width: 10px; /* ปรับขนาด bullet */
+  height: 10px; /* ปรับขนาด bullet */
+  border-radius: 50%;
+  opacity: 0.5; /* ทำให้เป็นวงกลม */
+}
+
+/* สีของ bullet ที่ถูกเลือก */
+.swiper-pagination-bullet-active {
+  background-color: white;
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+}
+
+.swiper-button-next {
+  color: rgb(228, 228, 228);
+}
+.swiper-button-prev {
+  color: rgb(228, 228, 228);
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  color: rgb(255, 255, 255);
+}
+
+.container {
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+  padding: 50px;
+  border-radius: 10px;
+  /* min-width: 800px; */
+  max-width: 800px;
+  min-height: 500px;
+  margin: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  background-color: #f6f5f7;
+  position: relative;
+}
+
+.container .form {
+  position: absolute;
+  top: 0;
+  text-align: center;
+  padding: 0 20px;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f5f7;
+  overflow: hidden;
+}
+
+.container .form.signup-form {
+  right: 0;
+}
+
+.container .form.login-form {
+  left: 0;
+}
+
+.container .form .wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.7s ease-in-out;
+  overflow: hidden;
+}
+
+.container .form.form.login-form .wrapper {
+  transform: translateX(100%);
+}
+.container .form.form.login-form.active .wrapper {
+  transform: translateX(0);
+}
+.container .form.form.signup-form .wrapper {
+  transform: translateX(-100%);
+}
+.container .form.form.signup-form.active .wrapper {
+  transform: translateX(0);
+}
+
+.container .form .wrapper form {
+  width: 80%;
+}
+
+.container .form h1 {
+  font-size: 50px;
+  margin-bottom: 5px;
+  font-weight: 200;
+}
+
+.container .form p {
+  line-height: 25px;
+  font-size: 14px;
+  margin-bottom: 30px;
+  font-weight: 500;
+}
+
+.container .form button {
+  background-color: rgb(243, 156, 156);
+  padding: 1px 10px;
+  width: 40%;
+  border-radius: 10px;
+}
+
+.container .form input {
+  display: block;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  margin-bottom: 15px;
+  height: 35px;
+  font-family: "Montserrat";
+  padding-left: 15px;
+  background-color: rgb(221, 220, 220);
+  border-radius: 8px;
+}
+
+.container .form input:focus {
+  border: 2px solid #6fc5ff; /* เปลี่ยนสีกรอบเป็นสีน้ำเงิน */
+  outline: none;
+  box-shadow: 0 0 8px rgba(152, 214, 255, 0.7);
+}
+
+.overlay-container {
+  position: absolute;
+  background-color: crimson;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.7s ease-in-out;
+}
+
+.container .overlay-container .overlay {
+  position: absolute;
+  left: 0;
+  width: 200%;
+  background-color: rgb(158, 197, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background-image: url(./assets/images/gifbg1.gif);
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+  transition: transform 0.7s ease-in-out;
+}
+
+.container .overlay-container .overlay::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(197, 197, 197);
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.container .overlay .overlay-left,
+.container .overlay .overlay-right {
+  flex-basis: 50%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container .overlay h1 {
+  font-size: 40px;
+  font-weight: 300;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .overlay p {
+  font-size: 25px;
+  font-weight: 300;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.container .overlay button {
+  background-color: rgb(250, 162, 169);
+  margin-top: 20px;
+  padding: 0 10px;
 }
 
-.card {
-  padding: 2em;
+/* Action */
+.onaction-left {
+  transform: translateX(100%);
 }
 
-.read-the-docs {
-  color: #888;
+.onactionoverlay-left {
+  transform: translateX(-50%);
+}
+
+.onaction-right {
+  transform: translateX(0);
+}
+
+.onactionoverlay-right {
+  transform: translateX(0);
+}
+
+.onactionform-left {
+  transform: translateX(0);
 }
