--- a/src/App.css
+++ b/src/App.css
@@ -301,3 +301,31 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
 }
+
+.onactive {
+  background-color: red;
+  padding: 5px;
+}
+
+/* ปรับแต่งแถบเลื่อนในแนวตั้ง */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* ปรับแต่งตัวแถบเลื่อนที่เลื่อน (thumb) */
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #bcbdbd; /* สีของแถบเลื่อน */
+  border-radius: 10px; /* ขอบมน */
+  border: 2px solid #ffffff; /* ขอบด้านนอก */
+}
+
+/* ปรับแต่งแถบเลื่อนเมื่อ hover */
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #6db4ae; /* เปลี่ยนสีเมื่อ hover */
+}
+
+/* ปรับแต่งพื้นที่ของแถบเลื่อน */
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* สีของพื้นที่แถบเลื่อน */
+  border-radius: 10px; /* ขอบมน */
+}
