--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  transition: background-color 0.5s ease-in-out, color 0.1s ease-in-out;
+  transition: background-color 0.5s ease-in-out, color 0.1s ease-in-out,
+    transform 0.2s ease-in-out;
 }
 
 body {
