--- a/src/App.css
+++ b/src/App.css
@@ -30,17 +30,18 @@
 .container {
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
   padding: 50px;
-  border-radius: 10px;
+  border-radius: 25px;
+  overflow: hidden;
   /* min-width: 800px; */
-  max-width: 800px;
-  min-height: 500px;
-  margin: 0 20px;
+  max-width: 900px;
+  min-height: 600px;
+  margin: 0px;
   display: flex;
   align-items: center;
   justify-items: center;
   background-color: #f6f5f7;
   position: relative;
-  z-index: 40;
+  z-index: 60;
   animation-name: fadeIn;
   animation-duration: 1s;
   animation-fill-mode: forwards;
@@ -53,6 +54,12 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 800px) {
+  .container {
+    min-height: 450px;
   }
 }
 
@@ -229,15 +236,6 @@
 }
 
 /* Popup-Login */
-.Popup-login {
-  position: fixed;
-  z-index: 20;
-  background-color: rgba(0, 0, 0, 0.384);
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
 
 .container-grid {
   display: grid;
